2005-01-29  Phil Blundell  <philb@gnu.org>

	* main.c: Guard mcheck code with #ifdef USE_MCHECK.

2004-09-07  Florian Boor  <florian.boor@kernelconcepts.de>

    * Released Version 0.95
    * main.c: Added scrollbars if necessary.
    * main.c: Fixed several displaying issues.
    * Makefile: V 0.95

2004-09-06  Florian Boor  <florian.boor@kernelconcepts.de>

	* main.c: Make images that fit in size unmovable.
	* main.c: Remember last rotation setting.
    * main.c, image_tools.c: Fixed rotation.

2004-08-30  Florian Boor  <florian.boor@kernelconcepts.de>

	* main.c: Fix to prevent close button to disappear.
	* main.c: Fixed button order in slideshow dialog.

2004-08-20  Florian Boor  <florian.boor@kernelconcepts.de>

	* Released V 0.94
	* main.c: Fixed various sources of warnings and segfaults.
	* Makefile: Turn off debug per default.

2004-08-11  Florian Boor  <florian.boor@kernelconcepts.de>

	* Released V 0.93
	* main.c: Fixed three bugs causing segfaults.
	* Makefile: V 0.93

2004-08-09  Florian Boor  <florian.boor@kernelconcepts.de>
	* Released V 0.92
	* main.c: Improved file type checking.
	* gpe-gallery.applications: Updated MIME types.
	* Makefile: Version is 0.92

2004-07-12  Florian Boor  <florian.boor@kernelconcepts.de>
	* Fixed segfault due to missing check.

2004-07-01  Florian Boor  <florian.boor@kernelconcepts.de>
	* Makefile: Updated MIME stuff to latest standards.

2004-06-08  Florian Boor  <florian.boor@kernelconcepts.de>
	* Removed obsolete icons: list_view.png, icon_view.png.
	* main.c: Use icons provided by gpe-icons.

2004-06-03  Florian Boor  <florian.boor@kernelconcepts.de>
	* Released V 0.91
	* Pushed version to 0.91
	* Makefile: Some more tweaks to work with oe.	

2004-05-24  Florian Boor  <florian.boor@kernelconcepts.de>
	* main.c: Removed setting of toolbar style for more fexibility. 
              We'll use xsettings to set this in future.
	* main.c: add_directory(): Fixed small memory hole.
	* main.c: Fixed big memory hole.
